<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <!-- 首页TOP -->

    <include
        layout="@layout/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TabLayout
        android:id="@+id/mTabLayout"
        style="@style/MyTabLayout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/color_white"
        app:tabTextAppearance="@style/MyTabLayoutTextAppearance" />

    <com.svgouwu.client.view.MyRadioGroup
        android:id="@+id/main_tab_group"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:visibility="gone">



        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/rb_all"
                style="@style/order_status_radio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:checked="true"
                android:text="@string/order_status_all" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/rb_pending_payment"
                style="@style/order_status_radio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/order_status_pending_payment" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">


            <RadioButton
                android:id="@+id/rb_pending_delivery"
                style="@style/order_status_radio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/order_status_pending_delivery" />

        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">


            <RadioButton
                android:id="@+id/rb_pending_receive"
                style="@style/order_status_radio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/order_status_pending_receive" />

        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">


            <RadioButton
                android:id="@+id/rb_pending_comment"
                style="@style/order_status_radio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/order_status_pending_comment" />

        </FrameLayout>

    </com.svgouwu.client.view.MyRadioGroup>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.jcodecraeer.xrecyclerview.XRecyclerView
            android:id="@+id/mXRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"/>

        <com.svgouwu.client.view.LoadPage
            android:id="@+id/mLoadPage"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="visible" />
    </FrameLayout>

</LinearLayout>