<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:minWidth="280dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:text="有新版本"
        android:textColor="#909090"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_head" />

    <ScrollView
        android:layout_marginTop="10dip"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="200dp">
        <TextView
            android:id="@+id/tv_update_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="#909090"
            android:textSize="16sp" />
    </ScrollView>

    <!--更新进度-->
    <LinearLayout
        android:id="@+id/ll_update_progress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:visibility="gone"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"/>

        <TextView
            android:id="@+id/tv_update_progress_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/text_load_progress"
            android:textColor="#909090"/>
    </LinearLayout>

    <CheckBox
        android:id="@+id/cb_update_ignore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textSize="12sp"
        android:text="Ignore this version alert"
        android:textColor="#909090" />
    <!--操作按钮-->
    <LinearLayout
        android:id="@+id/ll_operation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_update_download"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_app_update_ok"
            android:text="@string/text_download"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <View
            android:layout_width="0.5dip"
            android:layout_height="fill_parent"
            android:background="#DCDEE0" />

        <Button
            android:id="@+id/btn_update_cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_app_update_cancel"
            android:text="@string/text_cancel"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>
